--- a/sass/page/_listing.scss
+++ b/sass/page/_listing.scss
@@ -839,6 +839,12 @@ z-index: 1;
     display: none;
     // opacity: 0;
 }
+.uploadFile .uploadPicture li:nth-child(3){
+    display: none;
+}
+.uploadFile .uploadPicture li:nth-child(4){
+    display: none;
+}
 .uploadFile .uploadPicture li img{
     display: block;
     margin: auto;
