--- a/sass/page/_backHome.scss
+++ b/sass/page/_backHome.scss
@@ -114,6 +114,6 @@ a{
 /* 主要內容 */
 .mainContent{
     width: 82%;
-//    overflow: scroll;
+   overflow-y: scroll;
    background-color: rgb(122, 173, 190); 
 }
