--- a/html/layout/header.html
+++ b/html/layout/header.html
@@ -53,7 +53,7 @@
                     </li>
                     <li style="--animation-order: 7;">
                         <div class="login">
-                            <a href="login.html" class="whiteRound">登入</a>
+                            <a href="#" class="whiteRound">登入</a>
                             <a href="listing.html" class="round">上架</a>
                         </div>
                     </li>
