串接資料庫+修改

--- a/html/layout/backheader.html
+++ b/html/layout/backheader.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <link rel="stylesheet" href="assets/css/backStyle.css">
     <script src="js/vue/vue.js"></script>
+    <script src="js/jquery/jquery.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
         
