--- a/sass/page/_backHome.scss
+++ b/sass/page/_backHome.scss
@@ -137,3 +137,9 @@ i{
     right: 4%;
     cursor: pointer;
 }
+.pageIndex{
+    background-color: #ffc489;
+}
+.test{
+    background-color: #363636;
+}
