--- a/sass/page/_about.scss
+++ b/sass/page/_about.scss
@@ -1,4 +1,6 @@
 .aboutMain{
+    // background: url(../../assets/image/01-01.png) scroll no-repeat 50% 50% / 100% 100%;
+    
     .backToTop{
         position: fixed;
         left: 15%;
@@ -52,7 +54,7 @@
     }
 
     .introduceCardWrap{
-        margin: auto;
+        margin: 3em auto;
         // 書櫃 
         .bookshelf{
             width: 100%;
