--- a/sass/page/_backRobSup.scss
+++ b/sass/page/_backRobSup.scss
@@ -6,7 +6,7 @@
             width: 100%;
         }
         .robSupTitle{
-            >th{
+            th{
                 box-sizing: border-box;
                 padding: 0.5em 0.5em;
                 text-align: center;
@@ -25,7 +25,7 @@
             box-sizing: border-box;
             padding: 0.5em 0.5em;
             text-align: center;
-            >td{
+            td{
                 box-sizing: border-box;
                 padding: 0.5em 0.5em;
                 text-align: left;
@@ -40,7 +40,8 @@
                     white-space: normal;
                 }
                 &:nth-child(3){
-                    width: 5em;
+                    width: 8em;
+                    text-align: center;
                 }
             }
             
@@ -50,34 +51,45 @@
 
     }
     .txtBox{
-        box-sizing: border-box;
-        padding: 2em;
-        // background-color: #afa;
         position: fixed;
+        box-sizing: border-box;
         top: 0;
         bottom: 0;
         right: 0;
-        left: 0;
+        left: 15%;
         margin: auto;
-        width: 90%;
-        height: 90%;
-        display: flex;
-        flex-direction: column;
-        >div{
-            input{
-                width: 80%;
+        width: 70%;
+        height: 70%;
+        padding: 2em;
+        form{
+            width: 100%;
+            height: 100%;
+            // background-color: #afa;
+            display: flex;
+            flex-direction: column;
+            div{
+                label{
+                    display: inline-block;
+                    width: 5em;
+                }
+                padding: 0.5em;
+                input[type*="text"]{
+                    width: 80%;
+                }
+            }
+            div:nth-of-type(3){
+                flex-grow: 1;
+                display: flex;
+                textarea{
+                    width: 80%;
+                    height:100%;
+                }
+            }
+            div:nth-child(4){
+                
             }
         }
-        >div:nth-child(3){
-            flex-grow: 1;
-            textarea{
-                width: 80%;
-                height:100%;
-            }
-        }
-        >div:nth-child(4){
-            
-        }
+       
 
     }
 }
