--- a/sass/backStyle.scss
+++ b/sass/backStyle.scss
@@ -2,7 +2,12 @@
 @import 'basic/reset';
 @import 'basic/uiSet';
 
+//機器人客服
 @import 'page/backRobSup';
+//真人客服
+@import 'page/backSup';
+
+
 @import 'page/backProduct';
 @import 'page/backOrder';
 @import 'page/backObj';
