--- a/galleryAll/gallery/galllery02.css
+++ b/galleryAll/gallery/galllery02.css
@@ -1,10 +1,10 @@
 .displayNone{
     display: none;
 }
-body {
+/* body {
     margin: 0;
     overflow: hidden;
-}
+} */
 #stats {
     position: absolute;
     left: 0;
