--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,8 @@
 //css歸零+共用
 @import 'basic/reset';
 @import 'basic/uiSet';
+//loading
+@import 'layout/loading';
 //頁首頁尾
 @import 'layout/header';
 @import 'layout/headerNormal';
