--- a/galleryAll/gallery/afterImageGallery02.css
+++ b/galleryAll/gallery/afterImageGallery02.css
@@ -12,6 +12,7 @@
     width: 540px;
     height: 400px;
     border: 1px solid #f5f5f5;
+    background-color: #fff;
     /* box-shadow: 0px 0xp 20px 5px rgba(0,0,0,0.15); */
     /* overflow: hidden; */
 }
@@ -50,6 +51,15 @@
     height: 100%;
     background: transparent;
 }
+/* .compare input::-webkit-slider-thumb{
+    appearance: none;
+    display: block;
+    width: 3px;
+    height: 400px;
+    border: 1px solid #f5f5f5;
+    background: #5b83dc;
+    cursor: pointer;
+} */
 .compare input::-webkit-slider-thumb{
     appearance: none;
     display: block;
@@ -64,3 +74,8 @@
     border: 1px solid #f5f5f5;
     transition: all 300ms ease-in-out;
 }
+/* .compare input:active{
+    background: #e25a5a;
+    border: 1px solid #f5f5f5;
+    transition: all 300ms ease-in-out;
+} */
