--- a/galleryAll/gallery/cubeGallery02.css
+++ b/galleryAll/gallery/cubeGallery02.css
@@ -18,12 +18,12 @@ body{
 }
 .cube{
     position: relative;
-    margin-left: 45%;
-    width: 100px;
-    height: 100px;
+    margin-left: 35%;
+    width: 200px;
+    height: 200px;
     transform-style: preserve-3d;
     transform: rotatex(-30deg);
-    animation: animate 10s linear infinite;
+    animation: animate 15s linear infinite;
 }
 @keyframes animate {
     0%{
@@ -35,8 +35,8 @@ body{
 }
 .cube div{
     position: absolute;
-    top: 50%;
-    left:0;
+    top: 25%;
+    left: 0;
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
@@ -48,32 +48,32 @@ body{
     width: 100%;
     height: 100%;
     background: linear-gradient(#151515,#00ec00);
-    transform: rotateY(calc(90deg*var(--i))) translateZ(50px);
+    transform: rotateY(calc(90deg*var(--i))) translateZ(100px);
 }
 .cube .top{
     position: absolute;
-    top: 50%;
+    top: 25%;
     left: 0;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     background-image: url('mona_lisa_ps.png');
-    background-size: 100px 100px;
+    background-size: 200px 200px;
     background-repeat: no-repeat;
-    transform: rotateX(90deg) translateZ(50px);;
+    transform: rotateX(90deg) translateZ(100px);;
 }
 .top::before{
     content: '';
     position: absolute;
     top: 0;
     left: 0;
-    width: 100px;
-    height: 100px;
-    background-color: #0f0;
-    transform: translateZ(-150px);
+    width: 150px;
+    height: 150px;
+    background-color: rgb(255, 0, 170);
+    transform: translateZ(-250px);
     filter: blur(20px);
-    box-shadow: 0 0 120px rgba(0,255,0,0.2),
-    0 0 200px rgba(0,255,0,0.4),
-    0 0 300px rgba(0,255,0,0.6),
-    0 0 400px rgba(0,255,0,0.8),
-    0 0 500px rgba(0,255,0,1);
+    box-shadow: 0 0 120px rgba(255, 0, 170,0.2),
+    0 0 200px rgba(255, 0, 170,0.4),
+    0 0 300px rgba(255, 0, 170,0.6),
+    0 0 400px rgba(255, 0, 170,0.8),
+    0 0 500px rgba(255, 0, 170,1);
 }
