--- a/galleryAll/gallery/index.css
+++ b/galleryAll/gallery/index.css
@@ -83,15 +83,14 @@ a{
 }
 .galleryHint{
     position: absolute;
-    top: 25%;
+    top:50%;
     left: 50%;
-    /* transform: translateY(-50%); */
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     background-color: #fbfbfb;
     box-sizing: border-box;
-    padding: 5%;
+    padding: 0% 5% 2% 5%;
     border-radius: 30px;
-    height: 50%;
+    /* height: 50%; */
     width: 40%;
     display: flex;
     align-content: center;
@@ -106,8 +105,13 @@ a{
     top: 8%;
     cursor: pointer;
 }
+.galleryHint i{
+    font-size: 2em;
+}
 .galleryHint img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     text-align: center;
     padding-bottom: 1em;
 }
@@ -133,4 +137,16 @@ a{
     position: absolute;
     top: -30%;
     left: 0;
+}
+
+/*手機專用*/
+@media screen and (max-width: 767px) {
+    .galleryHint{
+        width: 80%;
+        height: 50%;
+        padding: 0% 5% 5% 5%;
+    }
+    .galleryHint .closeHint{
+        right: 5%;
+    }
 }
